# Desmos_Player

./: CMakeLists.txt  README.md  main.cpp
Potrace/: CMakeLists.txt  backend_dxf.c  backend_dxf.h  backend_eps.c  backend_eps.h  backend_geojson.c  backend_geojson.h  backend_latex.c  backend_latex.h  backend_pdf.c  backend_pdf.h  backend_pgm.c  backend_pgm.h  backend_svg.c  backend_svg.h  backend_xfig.c  backend_xfig.h  bitmap_io.c  decompose.c  getopt.c  getopt1.c  greymap.c  main_potrace.c  main_potrace.h  potracelib.h  progress_bar.c  progress_bar.h  trans.c
WebFiles/: index.html  main.js  style.css
mongoose/: CMakeLists.txt  mongoose.c
